test/syc/bad/longchar.c
/*
 * Both long and char specifier
 */

long char a;
